navbar fix on mobile screen

--- a/css/theme-styles.sass
+++ b/css/theme-styles.sass
@@ -585,6 +585,9 @@ header
     .container-fluid
       padding-left: 3rem !important
       padding-right: 3rem !important
+      @media screen and ( max-width: 1000px )
+        padding-left: 1.5rem !important
+        padding-right: 1.5rem !important
 
 
 .container-menu
